MICRO-WORLD-T-1 Added getting users in database. Added last auth field for user. Updated swagger info
