# docs/swagger.json
@@ -9,6 +9,23 @@
     },
     "basePath": "/api",
     "paths": {
+        "/admin/users": {
+            "get": {
+                "description": "Getting all users in system",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Getting all users in system",
+                "responses": {
+                    "200": {
+                        "description": "result",
+                        "schema": {
+                            "$ref": "#/definitions/UserList"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "produces": [
@@ -103,6 +120,34 @@
                 },
                 "result": {
                     "type": "boolean"
+                }
+            }
+        },
+        "User": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "last_auth": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserList": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "boolean"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/User"
+                    }
                 }
             }
         }
